# polygon-arb-bot

./: .env.example  .gitignore  Cargo.toml  Readme.md  opportunities.csv
abi/: IUniswapV2Router02.json
scripts/: run_demo.ps1
src/: main.rs
