[package]
name = "arbitrage_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0.14", features = ["abigen"] }
dotenv = "0.15"
eyre = "0.6"
chrono = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
